updated backend report fix

--- a/ImportXLSX.ipynb
+++ b/ImportXLSX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "0 2023-12-03 2023-12-04 2023-12-05 2023-12-06 2023-12-05"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "ObjectId('6572f8f05bf1a8dd5eb6d3de')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,20 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "UpdateResult({'n': 857, 'electionId': ObjectId('7fffffff000000000000000d'), 'opTime': {'ts': Timestamp(1703354604, 4), 't': 13}, 'nModified': 0, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1703354604, 4), 'signature': {'hash': b'\\xbdz\\x16\\xe7\\x16\\xaf9\\xba\\xa0\\xd1\\x83\\x0b\\xa0\\xebO&\\xb1\\x1bN\\x91', 'keyId': 7303824347657928709}}, 'operationTime': Timestamp(1703354604, 4), 'updatedExisting': True}, acknowledged=True)"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dogs_collection.delete_many({})\n",
     "# catcher_coll.delete_many({  })\n",
@@ -283,54 +272,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fetch all catcher IDs and vet IDs\n",
-    "catcher_ids = [catcher['_id'] for catcher in catcher_coll.find({}, {'_id': 1})]\n",
-    "vet_ids = [vet['_id'] for vet in vet_coll.find({}, {'_id': 1})]\n",
-    "caretaker_ids = [caretaker['_id'] for caretaker in caretakers_colls.find({}, {'_id': 1})]\n",
+    "# catcher_ids = [catcher['_id'] for catcher in catcher_coll.find({}, {'_id': 1})]\n",
+    "# vet_ids = [vet['_id'] for vet in vet_coll.find({}, {'_id': 1})]\n",
+    "# caretaker_ids = [caretaker['_id'] for caretaker in caretakers_colls.find({}, {'_id': 1})]\n",
     "\n",
-    "dogs_ids = [dog['_id'] for dog in dogs_collection.find({}, {'_id': 1})]\n",
+    "# dogs_ids = [dog['_id'] for dog in dogs_collection.find({}, {'_id': 1})]\n",
     "\n",
-    "for dog_id, catcher_id, vet_id, caretaker_id in zip(dogs_ids, catcher_ids, vet_ids, caretaker_ids):\n",
-    "    dogs_collection.update_one(\n",
-    "        {\"_id\": dog_id},\n",
-    "        {\"$set\": {\n",
-    "            \"catcherDetails\": catcher_id,\n",
-    "            \"vetDetails\": vet_id,\n",
-    "            \"caretakerDetails\": caretaker_id\n",
-    "        }}\n",
-    "    )"
+    "# for dog_id, catcher_id, vet_id, caretaker_id in zip(dogs_ids, catcher_ids, vet_ids, caretaker_ids):\n",
+    "#     dogs_collection.update_one(\n",
+    "#         {\"_id\": dog_id},\n",
+    "#         {\"$set\": {\n",
+    "#             \"catcherDetails\": catcher_id,\n",
+    "#             \"vetDetails\": vet_id,\n",
+    "#             \"caretakerDetails\": caretaker_id\n",
+    "#         }}\n",
+    "#     )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "UpdateResult({'n': 3, 'electionId': ObjectId('7fffffff000000000000000d'), 'opTime': {'ts': Timestamp(1703360677, 3), 't': 13}, 'nModified': 3, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1703360677, 3), 'signature': {'hash': b'P\\x90}SM\\x94\\x1aK\\xe4\\xfe`|\\x8bX\\xa2\\x13Z\\xee]q', 'keyId': 7303824347657928709}}, 'operationTime': Timestamp(1703360677, 3), 'updatedExisting': True}, acknowledged=True)"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TESTING IF CORRESPONDS PROPERLY\n",
+    "from random import choice\n",
     "\n",
-    "# cur = dogs_collection.find({\"releaseDate\": None})\n",
-    "# for document in cur:\n",
-    "#     print(document)\n",
-    "dogs_collection.update_many(\n",
-    "    {\"releaseDate\": None},\n",
-    "    {\"$set\": {\"status\": \"FitForRelease\"}}\n",
-    ")"
+    "dogs = dogs_collection.find({})\n",
+    "\n",
+    "# YY-(MONTH)-DD-(A/B/C)-(DAILY NUNBER)\n",
+    "cn_format = \"24-DEC-{}-{}-{}\"\n",
+    "\n",
+    "for dog in dogs:\n",
+    "    if dog[\"caseNumber\"].startswith(\"DEC-\"):\n",
+    "        dailynumber = dog[\"caseNumber\"].split('-').pop()\n",
+    "\n",
+    "        catcher = catcher_coll.find_one({\"_id\": dog[\"catcherDetails\"]})\n",
+    "        catching_date = catcher[\"catchingDate\"].strftime(\"%d\")\n",
+    "        random_alpha = choice([\"A\", \"B\", \"C\"])\n",
+    "\n",
+    "        new_case = cn_format.format(catching_date, random_alpha, dailynumber)\n",
+    "    \n",
+    "        dogs_collection.update_one({\"_id\": dog[\"_id\"]}, {\n",
+    "            \"$set\": {\n",
+    "                \"caseNumber\": new_case\n",
+    "            }\n",
+    "        })\n"
    ]
   }
  ],
